; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_openssl.c_tls_match_altsubject_component.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_openssl.c_tls_match_altsubject_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }

@NID_subject_alt_name = common dso_local global i32 0, align 4
@GENERAL_NAME_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*, i64)* @tls_match_altsubject_component to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tls_match_altsubject_component(i32* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %11, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @NID_subject_alt_name, align 4
  %15 = call i8* @X509_get_ext_d2i(i32* %13, i32 %14, i32* null, i32* null)
  store i8* %15, i8** %10, align 8
  store i64 0, i64* %12, align 8
  br label %16

16:                                               ; preds = %62, %4
  %17 = load i8*, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i64, i64* %12, align 8
  %21 = load i8*, i8** %10, align 8
  %22 = call i64 @sk_GENERAL_NAME_num(i8* %21)
  %23 = icmp slt i64 %20, %22
  br label %24

24:                                               ; preds = %19, %16
  %25 = phi i1 [ false, %16 ], [ %23, %19 ]
  br i1 %25, label %26, label %65

26:                                               ; preds = %24
  %27 = load i8*, i8** %10, align 8
  %28 = load i64, i64* %12, align 8
  %29 = call %struct.TYPE_7__* @sk_GENERAL_NAME_value(i8* %27, i64 %28)
  store %struct.TYPE_7__* %29, %struct.TYPE_7__** %9, align 8
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %26
  br label %62

36:                                               ; preds = %26
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 1
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = inttoptr i64 %42 to i8*
  %44 = call i64 @os_strlen(i8* %43)
  %45 = load i64, i64* %8, align 8
  %46 = icmp eq i64 %44, %45
  br i1 %46, label %47, label %61

47:                                               ; preds = %36
  %48 = load i8*, i8** %7, align 8
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 1
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 0
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %51, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = load i64, i64* %8, align 8
  %56 = call i64 @os_memcmp(i8* %48, i64 %54, i64 %55)
  %57 = icmp eq i64 %56, 0
  br i1 %57, label %58, label %61

58:                                               ; preds = %47
  %59 = load i32, i32* %11, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %11, align 4
  br label %61

61:                                               ; preds = %58, %47, %36
  br label %62

62:                                               ; preds = %61, %35
  %63 = load i64, i64* %12, align 8
  %64 = add nsw i64 %63, 1
  store i64 %64, i64* %12, align 8
  br label %16

65:                                               ; preds = %24
  %66 = load i8*, i8** %10, align 8
  %67 = load i32, i32* @GENERAL_NAME_free, align 4
  %68 = call i32 @sk_GENERAL_NAME_pop_free(i8* %66, i32 %67)
  %69 = load i32, i32* %11, align 4
  ret i32 %69
}

declare dso_local i8* @X509_get_ext_d2i(i32*, i32, i32*, i32*) #1

declare dso_local i64 @sk_GENERAL_NAME_num(i8*) #1

declare dso_local %struct.TYPE_7__* @sk_GENERAL_NAME_value(i8*, i64) #1

declare dso_local i64 @os_strlen(i8*) #1

declare dso_local i64 @os_memcmp(i8*, i64, i64) #1

declare dso_local i32 @sk_GENERAL_NAME_pop_free(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
